If password quality restrictions are setup in the Webmin Users module, enforce them in Virtualmin too.
Removed the ability to select the SpamAssassin client program and ClamAV virus filter on a per-domain basis, or in templates. This is now configured using the new Spam and Virus Scanning page, which effects all virtual servers.
Added the set-spam.pl command-line program, which modifies the spam and virus scanners for all virtual servers at once.
Expanded the plugin API to allow plugins to add their own links to the System Settings menus.
Moved the buttons for disabling and enabling multiple virtual servers off the Update Virtual Servers page to the domains list where they are more visible, and added confirmation pages.
Plugin modules can now define additional sections to appear on the right-hand side of the framed theme, and new global options to appear in the System Settings categories on the left.
The default number of alias servers that new virtual server owners can create can now be set on the Server Templates page.
Removed the Plugin Modules page and the section for enabled features from the Module Config page, and merged them into a single Features and Plugins page where you can select which are enabled.
Added a button to the Spam and Virus Scanning page to configure and start clamd, so that the clamdscan virus scanner can be used to save on CPU.
---- Changes since 3.47 ----
Updated Xoops script installer to version 2.0.17.1, SugarCRM to 4.5.1f, and SquirrelMail to version 1.4.11.
Updated the Horde script installer to version 3.1.5, along with many Horde applications like IMP and Kronolith.
Domains that don't have any databases but are allowed to create one can now install scripts that have the ability to create a database.
When re-creating a domain as part of a restore, the external DNS IP address is set to match the target system, rather than being copied from the source.