@@ -70,6 +70,7 @@ line2.1=SSL settings,11
 key_size=Default SSL key size,3,Webmin default (512 bits),6,,bits
 key_tmpl=Template for private key path,3,Default (<tt>~/ssl.key</tt>)
 cert_tmpl=Template for certificate path,3,Default (<tt>~/ssl.cert</tt>)
+ca_tmpl=Template for CA certificate path,3,Default (<tt>~/ssl.ca</tt>)
 
 line6.5=Reseller settings,11
 reseller_theme=Theme for new resellers,15,theme,reseller_theme
