@@ -1938,6 +1938,7 @@ cert_header1=Generate CSR and private key
 cert_csrok=Generate Now
 cert_header2=Current SSL certificate details
 cert_cn=Web server hostname
+cert_ccn=Certificate authority name
 cert_o=Organization
 cert_city=City or locality
 cert_notafter=Expiry date
@@ -1957,12 +1958,21 @@ cert_self=Generate Self-Signed Key
 cert_tabcurrent=Current Certificate
 cert_tabcsr=Signing Request
 cert_tabnew=New Certificate
+cert_tabchain=CA Certificate
 cert_download=Download certificate
 cert_pem=PEM format
 cert_pkcs12=PKCS12 format
 cert_pkcs7=PKCS7 format
 cert_edownload=No SSL certificate found!
 cert_eformat=Could not work out requested certificate format
+cert_header4=Certificate authority details
+cert_chain=CA certificate file
+cert_chain0=None needed
+cert_chain1=In file on server $1
+cert_chain2=Uploaded file $1
+cert_desc4=If your virtual server's SSL certificate is from a certificate authority that is not directly known to major browsers, you may need to upload the CA's certificate using this form.
+cert_chainok=Save Certificate
+cert_esubject=Certficate does not appear to have a common name
 
 csr_title=Generating CSR
 csr_title2=Generating Certificate
@@ -3802,3 +3812,10 @@ clamd_logdir=Creating logging directory ..
 clamd_logalready=.. log file already exists
 clamd_logdone=.. created $1
 clamd_lognone=.. could not work out directory from config file
+
+chain_err=Failed to save CA certificate
+chain_efile=Certificate file does not exist
+chain_ecert=Invalid certificate file : $1
+chain_emode1=You are not allowed to select a different file on the server!
+chain_eupload=No uploaded certificate file selected
+
